Update 마이크로서비스 스튜디오 매뉴얼_v1.md

--- a/마이크로서비스 스튜디오 매뉴얼_v1.md
+++ b/마이크로서비스 스튜디오 매뉴얼_v1.md
@@ -61,13 +61,13 @@ PaaSXpert 설치가 완료되면 마이크로서비스 스튜디오가 포함되
 
 아래 그림은 마이크로서비스 스튜디오를 단독으로 실행했을 경우 로그인 화면입니다.
 
-  ![MSA_Login](C:\Users\hyuny\Downloads\MSA_Login.jpg)  
+  ![MSA_Login](https://github.com/startupcloudplatform/Microservices/blob/master/images/MSA_Login.jpg?raw=true)  
 
 <로그인 화면>
 
 
 
-![MSA_Catalog](C:\Users\hyuny\Downloads\MSA_Catalog.jpg)
+![MSA_Catalog](https://github.com/startupcloudplatform/Microservices/blob/master/images/MSA_Main.png?raw=true)
 
 <메인 화면>
 
