Update 마이크로서비스 스튜디오 매뉴얼_v1.md

--- a/마이크로서비스 스튜디오 매뉴얼_v1.md
+++ b/마이크로서비스 스튜디오 매뉴얼_v1.md
@@ -13,7 +13,7 @@
 
 \-       데이터를 공유하지 않고 서비스 별로 독립적으로 가공하고 저장함
 
-마이크로서비스에 대한 상세 정보 및 아키텍처 관련 지식에 관한 자세한 설명은 <u>여기</u>에서 확인 가능하다.
+마이크로서비스에 대한 상세 정보 및 아키텍처 관련 지식에 관한 자세한 설명은 <u>[여기](<https://github.com/startupcloudplatform/Sample-App-Tutorial/blob/master/microservice.md>)</u>에서 확인 가능하다.
 
 ### 1.1 아키텍처
 
