--- a/마이크로서비스 스튜디오 매뉴얼_v1.md
+++ b/마이크로서비스 스튜디오 매뉴얼_v1.md
@@ -1,4 +1,4 @@
-# 사용자 뉴얼
+# 사용자 메뉴얼
  ## 1. 개요
 
 마이크로서비스 스튜디오는 각 컴포넌트가 독립적으로 구성되어 있는 마이크로서비스 기반 개발을 지원하는 도구이다. 마이크로서비스 아키텍처를 사용하여 설계된 결과물을 시각적으로 표현할 수 있고, 제공되는 디자인 기능을 이용하여 직관적으로 서비스를 구성하고 관리할 수 있다. 높은 가시성을 제공하고 있어 마이크로서비스 현황을 한눈에 파악이 가능하고 복잡한 아키텍처 연관성을 쉽게 확인 가능한 토폴로지 형태로 조회하는 기능도 제공한다. 
