--- a/마이크로서비스 스튜디오 매뉴얼_v1.md
+++ b/마이크로서비스 스튜디오 매뉴얼_v1.md
@@ -234,6 +234,6 @@ public @ResponseBody
 
 API Health 상태를 모니터링 대시보드로 제공한다. 
 
-![MSA_Monitoring](C:\Users\hyuny\Downloads\MSA_Monitoring.png)
+![MSA_Monitoring](https://github.com/startupcloudplatform/Sample-App-Tutorial/blob/master/images/apimonitoring.png)
 
 모니터링 페이지에 표시되는 항목으로는 평균 반응 시간 (밀리초), 총 코드 호출 횟수, 등록 후 업타임 경과가 있으며, 평균 반응 시간과 코드 호출 횟수는 시간별 그래프로 확인할 수 있다. 이외에 최근 HTTP 에러도 하단에서 확인할 수 있다.
