--- a/마이크로서비스 스튜디오 매뉴얼.md
+++ b/마이크로서비스 스튜디오 매뉴얼.md
@@ -19,7 +19,7 @@
 
 클라우드 기반 창업플랫폼에서 제공하는 마이크로서비스 스튜디오는 기본적으로 아래와 같은 구조를 하고 있다. 
 
-![1558578933076](C:\Users\hyuny\AppData\Roaming\Typora\typora-user-images\1558578933076.png)
+![MSA_Architecture](https://github.com/startupcloudplatform/Microservices/blob/master/images/MSA_Architecture.png)
 
 운영자는 마이크로서비스 스튜디오를 통해 만들어진 어플리케이션을 Zuul 기반의 API 게이트웨이, Eureka 기반의 레지스트리를 이용하여  Spring-config 기반으로 구성하고, Swagger API를 통해 API의 상세 스펙을 정의 및 명시하여 공개할 수 있다. 공개된 API는 다른 개발자가 자신의 마이크로서비스를 구성할 때 사용 가능하다.
 
