Update 마이크로서비스 스튜디오 매뉴얼.md

--- a/마이크로서비스 스튜디오 매뉴얼.md
+++ b/마이크로서비스 스튜디오 매뉴얼.md
@@ -29,13 +29,13 @@
 
 #### 마이크로서비스 디자인 도구 제공
 
-기존의 모놀리식 아키텍처와 달리 각 컴포넌트는 서비스라는 형태로 구현되고 API를 이용하여 타 서비스와 통신 서비스 경계는 구문 또는 업무 영역(도메인)에 따르기 때문에 작은 단위로 쪼갠 업무 영역을 앱 단위로 쉽게 표현할 수 있는 가시성 기능을 제공합니다. 쉬운 접근을 위해 swimlane 다이어그램을 적용하여 lane 단위로 설계를 적용할 수 있습니다. 마이크로서비스 기반 개발 시 레지스트리정보, Config 정보는 필수 정보이나 디자인 시에는 화면에 노출시키지 않아 복잡성을 줄였습니다.
+기존의 모놀리식 아키텍처와 달리 각 컴포넌트는 서비스라는 형태로 구현되고 API를 이용하여 타 서비스와 통신 서비스 경계는 구문 또는 업무 영역(도메인)에 따르기 때문에 작은 단위로 쪼갠 업무 영역을 앱 단위로 쉽게 표현할 수 있는 가시성 기능을 제공한다. 마이크로서비스 기반 개발 시 레지스트리정보, Config 정보는 필수 정보이나 디자인 시에는 화면에 노출시키지 않아 복잡성을 줄였다.
 
 
 
 #### 그래픽 토폴로지 제공
 
-마이크로서비스로 생성된 앱 간의 관계를 한눈에 보여주는 기능으로 토폴로지 형태로 제공하여 복잡한 앱 간의 관계를 시각적으로 표현하여 가시성을 높였습니다. 앱 상태가 장애가 발생했거나 중지 상태와 같은 경우도 표시해주고 있어 문제 발생 시 즉각적인 대응이 가능하도록 구성하였습니다. 
+마이크로서비스로 생성된 앱 간의 관계를 한눈에 보여주는 기능으로 토폴로지 형태로 제공하여 복잡한 앱 간의 관계를 시각적으로 표현하여 가시성을 높였다. 앱 상태가 장애가 발생했거나 중지 상태와 같은 경우도 표시해주고 있어 문제 발생 시 즉각적인 대응이 가능하도록 구성하였다. 
 
 
 
@@ -53,13 +53,13 @@
 
 ## 2. 마이크로서비스 스튜디오 시작하기
 
-마이크로서비스 스튜디오는 웹 기반으로 제공하는 마이크로서비스 개발 지원 도구로 누구나 쉽게 마이크로서비스로 설계된 내용을 앱과 연관된 게이트웨이, 백앤드 앱 간의 관계를 디자인할 수 있습니다. 웹 기반으로 자신이 개발하고자 하는 마이크로서비스 기반 시스템을 쉽게 표현할 수 있습니다. 
+마이크로서비스 스튜디오는 웹 기반으로 제공하는 마이크로서비스 개발 지원 도구로 누구나 쉽게 마이크로서비스로 설계된 내용을 앱과 연관된 게이트웨이, 백앤드 앱 간의 관계를 디자인할 수 있다. 웹 기반으로 자신이 개발하고자 하는 마이크로서비스 기반 시스템을 쉽게 표현할 수 있다. 
 
 ### 2.1 로그인
 
-PaaSXpert 설치가 완료되면 마이크로서비스 스튜디오가 포함되어 있습니다. PaaSXpert와 동일한 URL를 통해 로그인을 실행합니다. 마이크로서비스 스튜디오는 포털을 통해서 통합로그인을 통해 별도의 로그인 없이 사이트 접속이 가능합니다. 만약 별도 마이크로서비스 스튜디오로 접근하였다면 개별 로그인을 실행해야 합니다.
+PaaS-TA 사용자 포털에 접속하면 배포 메뉴에 마이크로서비스 스튜디오가 포함되어 있다. 마이크로서비스 스튜디오는 포털을 통하거나, 별도 URL을 통해 사용자가 기존에 사용하던 PaaS-TA 계정을 통해 로그인이 가능하다. 
 
-아래 그림은 마이크로서비스 스튜디오를 단독으로 실행했을 경우 로그인 화면입니다.
+아래 그림은 마이크로서비스 스튜디오를 실행했을 경우 로그인 화면이다.
 
   ![MSA_Login](https://github.com/startupcloudplatform/Microservices/blob/master/images/MSA_Login.jpg?raw=true)  
 
@@ -75,7 +75,7 @@ PaaSXpert 설치가 완료되면 마이크로서비스 스튜디오가 포함되
 
 ### 2.2 마이크로서비스 생성하기
 
-마이크로서비스아키텍처 메뉴를 통해 마이크로서비스를 생성하려면 PaaSXpert의 배포 메뉴의 마이크로서비스아키텍처를 선택합니다. 초기 화면은 마이크로서비스 목록이 조회됩니다. 조회되는 목록은 현재 선택되어 있는 프로젝트(조직)이 기본으로 보이고 리스트 박스를 통해 프로젝트(조직)을 변경할 수 있습니다. 
+마이크로서비스아키텍처 메뉴를 통해 마이크로서비스를 생성하려면 PaaSXpert의 배포 메뉴의 마이크로서비스아키텍처를 선택한다. 초기 화면은 마이크로서비스 목록이 조회된다. 조회되는 목록은 현재 선택되어 있는 프로젝트(조직)이 기본으로 보이고 리스트 박스를 통해 프로젝트(조직)을 변경할 수 있다. 
 
  
 
